[package]
name = "file-system-stats"
version = "0.1.0"
authors = ["Sam Blazes <blazes.sam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbr = "1"
nfd = "0.0"

clipboard = "0.5"

tokio = {version = "1", features = ["full"]}
async-channel = "1"

winit = "0.24.0"
gfx = "0.18"
gfx_device_gl = "0.16"
glutin = "0.26"
old_school_gfx_glutin_ext = "0.26"
image = "0.23"
imgui = "0.7"
imgui-gfx-renderer = "0.7"
imgui-winit-support = "0.7"
stretch = "0.3"
